Some translations. More missing

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -586,6 +586,7 @@ ca:
       set_dates: "Set the start & end date"
       show_archived: "View {{count}} archived tasks"
     fields:
+      title: New Task List
       #####
       task_list: A task lists defines a milestone for your project. Inside a task list you can create Tasks and assign them to people.
       name: Task List name
