Always show and allow "Convert to task". Also add explanation text when comments can no longer be edited

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -681,6 +681,7 @@ ca:
       commented_on_a_task_list: "-"
       confirm_delete: Segur que vols esborrar aquest comentari?
       hours_hrs: "{{hours}}H"
+      cannot_edit: "Comment cannot be edited after 15 minutes"
     ####
     hours:
       add_hours: Hours
