--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -662,6 +662,8 @@ zh:
       commented_on_a_task_list: "-"
       confirm_delete: 您确信要删除这条评论？
       hours_hrs: "{{hours}}H"
+      ####
+      cannot_edit: "Comment cannot be edited after 15 minutes"
     ####
     hours:
       add_hours: Hours
