--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -659,6 +659,7 @@ en:
       commented_on_a_task_list: "-"
       confirm_delete: Are you sure you want to delete this comment?
       hours_hrs: "{{hours}}H"
+      cannot_edit: "Comment cannot be edited after 15 minutes"
     hours:
       add_hours: Hours
       hours: How many hours did you put into this task?
