--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -659,6 +659,7 @@ es:
       commented_on_a_task_list: "-"
       confirm_delete: Seguro que quieres borrar este comentario?
       hours_hrs: "{{hours}}H"
+      cannot_edit: "Comment cannot be edited after 15 minutes"
     ####
     hours:
       add_hours: Hours
