--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -682,6 +682,7 @@ it:
       commented_on_a_task_list: "-"
       confirm_delete: Sicuro di voler rimuovere questo commento?
       hours_hrs: "{{hours}}H"
+      cannot_edit: "Comment cannot be edited after 15 minutes"
     ####
     hours:
       add_hours: Hours
