--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -659,6 +659,7 @@ ja:
       commented_on_a_task_list: "-"
       confirm_delete: このコメントを削除してもよろしですか?
       hours_hrs: "{{hours}}H" #####
+      cannot_edit: "Comment cannot be edited after 15 minutes"
     ####
     hours:
       add_hours: Hours
