--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -534,6 +534,9 @@ nl:
       commented_on: "-"
       commented_on_a_task_list: "-"
       confirm_delete: Weet u zeker dat u deze reactie wilt verwijderen?
+      ####
+      hours_hrs: "{{hours}}H"
+      cannot_edit: "Comment cannot be edited after 15 minutes"
     new:
       assigned_to_nobody: 'Niet-toegewezen'
       assigned_to: "Toegewezen aan:" 
