--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -660,6 +660,8 @@ ru:
       commented_on_a_task_list: "-"
       hours_hrs: "{{hours}}H"
       confirm_delete: Вы действительно хотите удалить этот комментарий?
+      ####
+      cannot_edit: "Comment cannot be edited after 15 minutes"
     ####
     hours:
       add_hours: Hours
