--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -475,9 +475,6 @@ ca:
     link:
       new: + Nova tasca
       edit: Editar
-      show_archived_tasks:
-        one: "Hi ha una tasca arxivada"
-        other: "Hi ha {{count}} tasques arxivades"
       hide_archived_tasks:
         one: "Amagar la tasca arxivada"
         other: "Amagar les {{count}} tasques arxivades"
@@ -584,7 +581,9 @@ ca:
       archive: "archive this task list"
       rename: "Rename task list"
       set_dates: "Set the start & end date"
-      show_archived: "View {{count}} archived tasks"
+      show_archived:
+        one: "Hi ha una tasca arxivada"
+        other: "Hi ha {{count}} tasques arxivades"
     fields:
       title: New Task List
       #####
@@ -824,8 +823,6 @@ ca:
       unarchived_tasks: "Unarchived Tasks"
       my_tasks: "Meves ({{count}})"
       everybodys_tasks: "Everybody's tasks"
-      show_archived_tasks: "Mostrar {{count}} tasques arxivades"
-      hide_archived_tasks: "Ocultar tasques arxivades"
     footer:
       support: Problemes? ¡Fes arribar feedback!
       mobile: Versió mòbil
