Update Russian translation (task lists)

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -113,6 +113,7 @@ ru:
       first_day_of_week: Начало недели
       change_password: Сменить пароль
       confirm_password: Подтвердить пароль
+      use_this_email: "У вас есть приглашения для участия в проектах на эту электронную почту. Если вы хотите получить доступ к этим проектам, не изменяйте адрес электронной почты. Вы сможете изменить e-mail после завершения процесса регистрации."
       notify_mentions: "Сообщать мне, если меня упоминают, например, Как дела @{{login}}! Вы получите сообщение!"
       notify_conversations: Уведомлять меня о сообщениях в отслеживаемом обсуждении
       notify_task_lists: Уведомлять меня об отслеживаемом списке задач
@@ -129,7 +130,7 @@ ru:
         login: "Вам нужен логин, чтобы войти. Люди смогут найти вас по логину. Должен быть только маленькими латинскими буквами, без пробелов."
         first_name: До 20 символов.
         last_name: До 20 символов.
-        email: Введите действующую электронную почту, по которому мы можем связаться с вами.
+        email: Введите действующую электронную почту, по которой мы можем связаться с вами.
         password: "Сочетания латинских букв или цифр"
     new:
       title: Создание аккаунта
@@ -281,7 +282,7 @@ ru:
         title: "{{name}}"
         description: "Последние действия по проекту {{name}}"
     fields:
-      tracks_time: "Включить слежение по времени"
+      tracks_time: "Включить учет времени"
       archiving: "Архивировать этот проект"
       forever: "Удалить этот проект навсегда"
       owner: "Владелец"
@@ -343,7 +344,7 @@ ru:
       invited_to_join: "{{by}} приглашает вас участвовать в проекте {{project}}."
       invited_to_join_group: "{{by}} приглашает вас присоединиться к группе {{group}}."
     resend:
-      resent: "Приглашение отправлено получателю {{recipient}}. Если письмо не дошло, перечитайте его ещё раз."
+      resent: "Приглашение отправлено получателю {{recipient}}. Если письмо не дошло, пригласите его ещё раз."
       return: Назад
     index_user:
       title: Приглашения в очереди
@@ -432,7 +433,12 @@ ru:
         too_long: 'должно быть короче 255 символов'
     fields:
       name: Что нужно сделать?
-      due_on: Нужно сделать перед... <i>(не обяз.)</i>
+      due_on: Нужно сделать до... <i>(не обяз.)</i>
+      task: Задача
+      title: Название задачи
+      body: Описание
+      optional: Необязательно
+      assigned_to: Кто ответственный?
     assigned:
       assigned_to: "Назначена {{user}}"
     due_on:
@@ -546,7 +552,14 @@ ru:
     archived:
       title: Все архивные задачи
       description: Вы просматриваете архивные задачи.
+    archive_box:
+      unarchive_list: Этот список задач заархивирован.
     actions:
+      resolve_and_archive: "Завершить все задачи и архивировать"
+      confirm_resolve_and_archive: "Вы уверены, что хотите завершить все задачи и поместить этот список задач в архив?"
+      archive: "Поместить этот список задач в архив"
+      rename: "Переименовать список задач"
+      set_dates: "Установить даты начала и завершения"
       show_archived:
         one: "Показать 1 архивную задачу"
         other: "Показать {{count}} архивных задач"
@@ -555,14 +568,21 @@ ru:
       name: Название списка задач
       start_on: Начало... <i>не обяз.</i>
       finish_on: Конец... <i>не обяз.</i>
+    filter:
+      due_date: "Показать задачи, завершающиеся до..."
+      assigned_to: "Показать задачи, назначенные на..."
     link:
       new: Новый список задач
       edit: Редактировать
       reorder: Сортировать
+      reorder_done: Сортировка выполнена
+      unarchive: Вернуть из архива
     index:
       add_link: Новый список задач
       empty: Нет задач в этой категории!
       tasks_for_all_projects: Задачи во всех проектах
+      tasks_for_project: Списки задач этого проекта
+      other_views: Другие представления
     primer:
       empty: В этом проекте пока нет списков задач.
       create_first: Создайте первый список задач в этом проекте!
@@ -573,6 +593,11 @@ ru:
       item4: "<b>Проверяйте</b>. Законченная задача не удаляется, вы можете просматривать сообщения и файлы задачи позднее."
       footer1: "Задачи — простой и гибкий способ <b>заставить вещи работать</b> и рассказать об этом другим."
       footer2: "Пора забыть экселевские таблички с планированием и сложные графики Гантта!"
+    overview_box:
+      this_list: "Этот список задач"
+      starts_on: "Начальная дата:"
+      ends_on: "Дата завершения:"
+      undefined: "Не определено"
     new:
       title: Новый список задач
       submit: Добавить список задач
@@ -582,7 +607,7 @@ ru:
       new_task_list: Новый список задач
       cant_create: Вы не можете создавать списки задач в этом проекте
       subscribe: Подписаться на новости
-      other_views: Other views
+      other_views: Другие представления
     show:
       title: "Список задач: {{name}}"
     destroy_message:
@@ -625,6 +650,10 @@ ru:
       commented_on: "-"
       commented_on_a_task_list: "-"
       confirm_delete: Вы действительно хотите удалить этот комментарий?
+      cannot_edit: "Комментарий не может быть отредактирован через 15 минут после создания"
+    hours:
+      add_hours: Часы
+      hours: Сколько часов вы затратили на эту задачу?
     new:
       assigned_to_nobody: 'Не назначен'
       assigned_to: "Назначен:"
@@ -639,6 +668,8 @@ ru:
       cannot_update: У вас нет прав обновлять этот комментарий
     actions:
       confirm_delete: Вы действительно хотите удалить этот комментарий?
+      convert_task: Конвертировать в задачу
+      edit: Редактировать комментарий
   example_projects:
     new:
       learn: Учитесь на примере!
@@ -835,7 +866,7 @@ ru:
     strong: сильный
 
   form:
-    cancel: Cancel
+    cancel: Отменить
 
   page_title:
     show_projects: Обзор
