Update locale for admin comment delete

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -631,7 +631,7 @@ en:
       observer: Observer. Read-only access to the project.
       commenter: "Commenter. Can comment, but not create new elements."
       participant: "Participant. Can do everything, but not invite users."
-      admin: Admin. Can invite users to the project.
+      admin: "Admin. Can invite users to the project, and delete comments."
     header:
       owner: Project Owner
       observer: Observer
