Removing My Tasks from Project#index, adding My Task count to global navigation
Now you'll see on top a counter of your tasks.
This will take you to the All Tasks page.

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -17,6 +17,9 @@ ca:
     print: Imprimir aquesta pàgina
     prev: Previous
     next: Next
+    tasks:
+      one: 1 tasca
+      other: "{{count}} tasques"
     comment:
       one: "{{count}} comentari"
       other: "{{count}} comentaris"
