--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -17,6 +17,9 @@ zh:
     print: 打印此页
     prev: 上一个
     next: 下一个
+    tasks:
+      one: 1 task
+      other: "{{count}} tasks"
     comment:
       one: "{{count}}条评论"
       other: "{{count}}条评价"
