--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -107,7 +107,7 @@ ja:
       add_ims: インスタントメッセージの追加
       add_social_networks: ソーシャルネットワークの追加
   users:
-    fields:
+    form:
       login: ユーザ名
       first_name: 名
       last_name: 姓
