--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -140,11 +140,13 @@ en:
       wants_task_reminder: "Send me a daily email of my tasks"
       invalid_login: "use only letters, numbers and _"
       avatar:
-        field: Your avatar
+        field: New avatar
         presence: "You can't upload a blank file"
         max_size: "File size can't exceed {{mb}}"
-        we_have_this_avatar: "This is the avatar we currently have of you:"
-        upload_here_or_at_gravatar: "You can upload a new avatar here, or upload it to <a href='http://gravatar.com'>Gravatar</a> for a global avatar you can use with Teambox and many other websites."
+        we_have_this_avatar: "This is the picture we currently have of you:"
+        gravatar_in_use: "We don't have a picture of you, so we're using {{gravatar}}:"
+        upload_here_or_at_gravatar: "You can either upload a picture here or set one on {{gravatar}}."
+        destroy: Delete avatar
       tooltips:
         login: "You need a username to login. People will be able to find you by username. Must be all lowercase, no spaces. You can use undescores."
         first_name: Up to 20 characters.
